fix: centered the contents of the about-me section when displayed on small and large screens

--- a/p1-web-dev-portfolio/assets/css/style.css
+++ b/p1-web-dev-portfolio/assets/css/style.css
@@ -422,7 +422,7 @@ body{
   flex-flow: column nowrap;
   gap: 1rem;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   text-align: center;
 }
 
@@ -766,6 +766,14 @@ body{
   color: var(--hightlighted-text);
 }
 
+.div-for-about-me-contents{
+  /* background: red; */
+  /* border: 2px solid red; */
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+
 /* MEDIA QUERIES */
 
 /* FOR TABLET SCREENS (481px to 768px) */
@@ -948,12 +956,6 @@ body{
   }
   .fa-star{
     color: gold;  
-  }
-
-  .div-for-about-me-contents{
-    /* background: red; */
-    display: flex;
-    flex-flow: row wrap;
   }
 
   .section__main{
